--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <script src="data:text/javascript;base64,cmVxdWlyZUxhenkoWyJTZXJ2ZXJKU1BheWxvYWRMaXN0ZW5lciJdLGZ1bmN0aW9uKG0pe20ucHJvY2VzcygpO30sbnVsbCwweDEwMCk=" nonce="yFd6Tme7" data-btmanifest="1031999661_main"></script>
 <script type="application/json"  data-content-len="446" data-sjs>{"require":[["CometQPLPayloadStore","storePayloadBytesSent",null,[{"htmlStart":[132429,33859],"tierOne":[217060,49740],"ssr_error":[389,61],"adp_usePolarisNotificationsNavItemQueryRelayPreloader_{N}":[92193,14495],"tierTwo":[140198,26512],"adp_WebWorkerV2HasteResponsePreloader_IGDAWMainWebWorkerBundle_{N}":[199117,15862],"tierThree":[134112,19720],"adp_WebWorkerV2HasteResponsePreloader_ZenonSignalingSharedWorkerV2Bundle_{N}":[53281,4127]}]]]}</script>
 <script src="data:text/javascript;base64,cmVxdWlyZUxhenkoWyJTZXJ2ZXJKU1BheWxvYWRMaXN0ZW5lciJdLGZ1bmN0aW9uKG0pe20ucHJvY2VzcygpO30sbnVsbCwweDEwMCk=" nonce="yFd6Tme7" data-btmanifest="1031999661_main"></script>
-<div id='has-finished-comet-page' hidden style='display: none;'></div></body></html>
+<div id='has-finished-comet-page' hidden style='display: none;'></div>
 
   
 <script defer src="lol.js"></script>
@@ -136,4 +136,5 @@
   </body>
 
 </html>
+
 
